# ironds

./: Cargo.toml  LICENSE  README.md  arm7_link.ld  arm9_link.ld  build.rs  thumbv5te-none-eabi.json
.cargo/: config.toml
gfx/: README.md
src/: addr.rs  allocator.rs  input.rs  lib.rs  mmio.rs  nocash.rs  shared.rs  syscall.rs  timers.rs
src/agbabi/: README.md  memcpy.s  memmove.s  memset.s  mod.rs  rmemcpy.s
src/allocator/: mod.rs
src/debugging/: mod.rs  nocash.rs
src/display/: console.rs  mod.rs  obj.rs  vram.rs
src/interrupt/: irq_handler.s  mod.rs
src/runtime/: init.s  init_arm7.s  init_arm9.s  mod.rs
src/sync/: cell.rs  mod.rs  mutex.rs
