[package]
name = "ironds"
version = "0.1.0"
edition = "2021"
license = "Zlib"
publish = false # remove this when adding to crates.io

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voladdress = "1.3"
bitflags = "2"
bitfield-struct = "0.4.1"
fixed = "1.23"
bytemuck = "1.13"

[features]
arm9 = []
arm7 = []

[profile.dev]
opt-level = 3
